--- a/.github/workflows/db-migrate.yml
+++ b/.github/workflows/db-migrate.yml
@@ -1,4 +1,5 @@
 name: db-migrate
+
 on:
   workflow_dispatch:
     inputs:
@@ -7,20 +8,41 @@ on:
         required: false
         default: "main"
   pull_request:
-    types: [labeled]
+    types: [opened, synchronize, reopened, labeled]
 
 jobs:
+  changes:
+    runs-on: ubuntu-latest
+    outputs:
+      migrations: ${{ steps.filter.outputs.migrations }}
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Detect migration changes
+        id: filter
+        uses: dorny/paths-filter@v3
+        with:
+          filters: |
+            migrations:
+              - 'supabase/migrations/**'
+
   migrate:
-    if: github.event_name == 'workflow_dispatch' || contains(github.event.pull_request.labels.*.name, 'apply-migrations')
+    needs: changes
+    if: >
+      github.event_name == 'workflow_dispatch' ||
+      (needs.changes.outputs.migrations == 'true' &&
+       contains(github.event.pull_request.labels.*.name, 'apply-migrations'))
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-        with: { ref: ${{ github.event.inputs.ref || github.ref }} }
+        with:
+          ref: ${{ github.event.inputs.ref || github.ref }}
 
       - uses: supabase/setup-cli@v1
-        with: { version: latest }
+        with:
+          version: latest
 
-      - name: Login
+      - name: Supabase login
         run: supabase login --token "${{ secrets.SUPABASE_ACCESS_TOKEN }}"
 
       - name: Link project
