--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -1,22 +1,18 @@
-name: release-drafter
-
+﻿name: release-drafter
 on:
   push:
     branches: [ main ]
   pull_request:
     types: [opened, edited, reopened, synchronize, labeled, unlabeled, closed]
-
 permissions:
   contents: write
   pull-requests: read
-
 jobs:
   update_release_draft:
     runs-on: ubuntu-latest
     steps:
       - uses: release-drafter/release-drafter@v6
         with:
-          # Ensure we read the correct config file name
           config-name: release-drafter.yml
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
