--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
-﻿{
-    "name":  "meditrack-diabetes",
-    "private":  true,
-    "version":  "0.1.0",
-    "workspaces":  [
-                       "apps/*",
-                       "packages/*"
-                   ],
-    "scripts":  {
-                    "dev":  "concurrently -k -n expo,func -c auto,auto \"pnpm --filter app-mobile start\" \"supabase functions serve --env-file ./env/.edge-functions.local\"",
-                    "typecheck":  "tsc -b",
-                    "lint":  "eslint . --ext .ts,.tsx --max-warnings=0",
-                    "format":  "prettier -w ."
-                },
-    "devDependencies":  {
-                            "concurrently":  "^9.2.0",
-                            "eslint":  "^9.6.0",
-                            "expo":  "~51.0.39",
-                            "prettier":  "^3.3.3",
-                            "typescript":  "^5.5.4"
-                        },
-    "dependencies":  {
-                         "@types/react":  "~18.2.79"
-                     }
+{
+    "name": "meditrack-diabetes",
+    "private": true,
+    "version": "0.1.0",
+    "workspaces": [
+        "apps/*",
+        "packages/*"
+    ],
+    "scripts": {
+        "dev": "concurrently -k -n expo,func -c auto,auto \"pnpm --filter app-mobile start\" \"supabase functions serve --env-file ./env/.edge-functions.local\"",
+        "typecheck": "tsc -b",
+        "lint": "eslint . --ext .ts,.tsx --max-warnings=0",
+        "format": "prettier -w ."
+    },
+    "devDependencies": {
+        "concurrently": "^9.2.0",
+        "eslint": "^9.6.0",
+        "expo": "~51.0.39",
+        "prettier": "^3.3.3",
+        "typescript": "^5.9.2"
+    },
+    "dependencies": {
+        "@types/node": "^24.3.0",
+        "@types/react": "~18.2.79"
+    }
 }
