--- a/apps/web-dashboard/tsconfig.json
+++ b/apps/web-dashboard/tsconfig.json
@@ -1,10 +1,23 @@
 {
   "compilerOptions": {
-    "types": ["vite/client"],
-    "moduleResolution": "node",
-    "module": "ESNext",
     "target": "ESNext",
-    "jsx": "react-jsx",
-    ...
-  }
+    "module": "ESNext",
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "moduleResolution": "node",
+    "jsx": "react",
+
+    "types": ["vite/client"],
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+
+    "strict": true,
+    "noEmit": true,
+    "isolatedModules": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+
+    "baseUrl": "."
+  },
+  "include": ["src", "vite.config.ts", "env.d.ts", "index.html"],
+  "exclude": ["dist", "node_modules"]
 }
