updates web tsconfig

--- a/apps/web-dashboard/tsconfig.json
+++ b/apps/web-dashboard/tsconfig.json
@@ -4,7 +4,8 @@
     "module": "ESNext",
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "moduleResolution": "node",
-    "jsx": "react",
+
+    "jsx": "react-jsx",
 
     "types": ["vite/client"],
     "resolveJsonModule": true,
@@ -21,3 +22,4 @@
   "include": ["src", "vite.config.ts", "env.d.ts", "index.html"],
   "exclude": ["dist", "node_modules"]
 }
+
