--- a/apps/web-dashboard/tsconfig.json
+++ b/apps/web-dashboard/tsconfig.json
@@ -4,10 +4,9 @@
     "module": "ESNext",
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "moduleResolution": "node",
-
     "jsx": "react-jsx",
 
-    "types": ["vite/client"],
+    "types": ["vite/client", "node"],
     "resolveJsonModule": true,
     "esModuleInterop": true,
 
