--- a/apps/app-mobile/app.json
+++ b/apps/app-mobile/app.json
@@ -2,19 +2,19 @@
   "expo": {
     "name": "MediTrack Diabetes",
     "slug": "meditrack-diabetes",
-    "scheme": "meditrack",
-    "ios": {
-      "supportsTablet": true
+    "sdkVersion": "53.0.0",
+    "icon": "./assets/icon.png",
+    "splash": {
+      "image": "./assets/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#141414"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF"
-      },
-      "package": "com.anonymous.meditrackdiabetes"
+        "backgroundColor": "#009999"
+      }
     },
-    "web": {
-      "bundler": "metro"
-    }
+    "web": { "output": "static" }
   }
 }
