--- a/apps/app-mobile/app.json
+++ b/apps/app-mobile/app.json
@@ -12,7 +12,9 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#009999"
+        "backgroundColor": "#009999",
+        "package": "com.hivoltg.meditrack",
+    "ios":   { "bundleIdentifier": "com.hivoltg.meditrack" },
       }
     },
     "web": { "output": "static" }
