--- a/apps/app-mobile/package.json
+++ b/apps/app-mobile/package.json
@@ -10,11 +10,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.45.4",
     "expo": "~51.0.0",
+    "expo-dev-client": "^5.2.4",
     "expo-router": "^5.1.4",
     "react": "18.2.0",
-    "react-native": "0.74.3",
-    "@supabase/supabase-js": "^2.45.4"
+    "react-native": "0.74.3"
   },
   "devDependencies": {
     "typescript": "^5.5.4"
