--- a/apps/web-dashboard/package.json
+++ b/apps/web-dashboard/package.json
@@ -1,13 +1,16 @@
 {
   "devDependencies": {
-    "vite": "^5.3.0",
+    "@types/node": "^20.12.0",
     "@vitejs/plugin-react": "^4.3.0",
     "typescript": "^5.5.0",
-    "@types/node": "^20.12.0"
+    "vite": "^5.3.0"
   },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
+  },
+  "dependencies": {
+    "expo-dev-client": "^5.2.4"
   }
 }
