--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "eslint": "^9.6.0",
         "expo": "~51.0.39",
         "prettier": "^3.3.3",
+        "supabase": "^2.34.3",
         "typescript": "^5.9.2",
         "vite": "^7.1.2"
     },
