--- a/apps/app-mobile/package.json
+++ b/apps/app-mobile/package.json
@@ -18,6 +18,11 @@
     "react-native": "0.74.3"
   },
   "devDependencies": {
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "devDependencies": {
+    "expo-dev-client": "^4.0.24",
+    "typescript": "^5.5.0",
+    "@types/react": "^18.2.0",
+    "@types/react-native": "^0.73.0"
   }
 }
