--- a/apps/app-mobile/package.json
+++ b/apps/app-mobile/package.json
@@ -1,18 +1,26 @@
 {
   "name": "app-mobile",
+  "version": "0.1.0",
   "private": true,
+  "main": "expo-router/entry",
+  "scripts": {
+    "start": "expo start",
+    "start:dev": "expo start --dev-client --tunnel",
+    "android": "expo run:android",
+    "ios": "expo run:ios"
+  },
   "dependencies": {
-    "@supabase/supabase-js": "^2.45.4",
-    "expo": "~51.0.0",
-    "expo-dev-client": "^5.2.4",
-    "expo-router": "^5.1.4",
+    "@supabase/supabase-js": "^2.45.0",
+    "expo": "^53.0.0",
+    "expo-notifications": "~0.28.15",
+    "expo-router": "^3.5.0",
     "react": "18.2.0",
-    "react-native": "0.74.3"
+    "react-native": "0.76.3"
   },
   "devDependencies": {
-    "typescript": "^5.5.0",
-    "expo-dev-client": "^4.0.24",
     "@types/react": "^18.2.0",
-    "@types/react-native": "^0.73.0"
+    "@types/react-native": "^0.73.0",
+    "expo-dev-client": "^4.0.24",
+    "typescript": "^5.5.0"
   }
 }
