--- a/package.json
+++ b/package.json
@@ -15,6 +15,12 @@
     "lint": "eslint . --ext .ts,.tsx --max-warnings=0",
     "format": "prettier -w ."
   },
+  "dependencies": {
+    "@react-navigation/native": "6.1.18",
+    "@react-navigation/native-stack": "6.9.26",
+    "react-native-safe-area-context": "5.6.0",
+    "react-native-screens": "4.14.1"
+  },
   "devDependencies": {
     "concurrently": "^9.2.0",
     "eslint": "^9.9.0",
