--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "concurrently": "^9.2.0",
     "eslint": "^9.9.0",
+    "typescript-eslint": "^7.18.0",
     "prettier": "^3.3.3",
     "typescript": "^5.5.4"
   }
