--- a/apps/app-mobile/package.json
+++ b/apps/app-mobile/package.json
@@ -14,6 +14,10 @@
     "expo": "^53.0.0",
     "expo-notifications": "~0.28.15",
     "expo-router": "^3.5.0",
+    "expo-file-system": "*",
+    "expo-sharing": "*",
+    "expo-print": "*",
+    "qrcode": "^1.5.3",
     "react": "18.2.0",
     "react-native": "0.76.3"
   },
