--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "dev": "concurrently -k -n expo,func -c auto,auto \"pnpm --filter app-mobile start:lan\" \"supabase functions serve --env-file ./env/.edge-functions.local\"",
     "typecheck": "tsc -b",
-    "lint": "eslint . --ext .ts,.tsx --max-warnings=0",
+    "lint": "eslint .",
     "format": "prettier -w .",
     "test": "tsc src/services/validation.test.ts src/services/validation.ts --outDir dist --types node --lib es2020 --esModuleInterop && node --test dist/validation.test.js"
   },
@@ -19,6 +19,9 @@
     "concurrently": "^9.2.0",
     "eslint": "^9.9.0",
     "prettier": "^3.3.3",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "@eslint/js": "^9.9.0",
+    "typescript-eslint": "^8.4.0",
+    "globals": "^15.8.0"
   }
 }
