--- a/package.json
+++ b/package.json
@@ -24,11 +24,10 @@
   "devDependencies": {
     "concurrently": "^9.2.0",
     "eslint": "^9.9.0",
-    "typescript-eslint": "^7.18.0",
-    "prettier": "^3.3.3",
-    "typescript": "^5.5.4",
     "@eslint/js": "^9.9.0",
     "typescript-eslint": "^8.4.0",
-    "globals": "^15.8.0"
+    "globals": "^15.8.0",
+    "prettier": "^3.3.3",
+    "typescript": "^5.5.4"
   }
 }
