--- a/.github/workflows/rc-release.yml
+++ b/.github/workflows/rc-release.yml
@@ -43,7 +43,7 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const tag = core.getInput("tag");
+            const tag = "${{ steps.validate.outputs.tag }}";
             const sha = "${{ steps.sha.outputs.sha }}";
             let exists = true;
             try {
@@ -64,11 +64,11 @@ jobs:
               });
               core.notice(`Updated tag ${tag} -> ${sha}`);
             }
-
+            
       - name: Checkout at tag
         uses: actions/checkout@v4
         with:
-          ref: ${{ inputs.tag }}
+          ref: ${{ steps.validate.outputs.tag }}
 
       - name: Setup Node (npm cache)
         uses: actions/setup-node@v4
